--- a/council_finance/templates/council_finance/following.html
+++ b/council_finance/templates/council_finance/following.html
@@ -233,13 +233,17 @@
                             <div class="flex items-center gap-4">
                                 <button class="flex items-center gap-1 text-sm text-gray-500 hover:text-blue-600 transition-colors" 
                                         data-action="like-update" data-update-id="{{ update.activity_log_id }}">
-                                    {% heroicon "thumb-up" size="mini" class="w-4 h-4" %}
-                                    <span data-like-count="update-{{ update.id }}">{{ update.like_count|default:0 }}</span>
+                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"></path>
+                                    </svg>
+                                    <span data-like-count="update-{{ update.activity_log_id }}">{{ update.like_count|default:0 }}</span>
                                 </button>
                                 
                                 <button class="flex items-center gap-1 text-sm text-gray-500 hover:text-blue-600 transition-colors" 
                                         data-action="show-comments" data-update-id="{{ update.activity_log_id }}">
-                                    {% heroicon "chat" size="mini" class="w-4 h-4" %}
+                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
+                                    </svg>
                                     <span>{{ update.comment_count|default:0 }}</span>
                                 </button>
                                 
